Refactor user input handling