@@ -2,19 +2,20 @@
 a população mundial estimada depois de um, dois, três, quatro e cinco anos. */
 
 package io.github.juliana_barreto.cap02;
+import io.github.juliana_barreto.utils.UserInput;
+
 import java.util.Scanner;
 import java.util.Locale;
 
 public class Exercicio2_34 {
     public static void main (String[] args) {
         Scanner scanner = new Scanner(System.in);
-        scanner.useLocale(new Locale("pt", "BR"));
-        System.out.print("Informe a população mundial atual (em bilhões): ");
-        double populacaoAtual = scanner.nextDouble();
-        System.out.print("Informe a taxa de crescimento anual (em %): ");
-        double taxaCrescimento = scanner.nextDouble();
-        System.out.print("Informe o ano atual: ");
-        int anoAtual = scanner.nextInt();
+        Locale.of("pt", "BR");
+        double populacaoAtual = UserInput.promptDouble(scanner,
+                "Informe a população mundial atual (em bilhões): ");
+        double taxaCrescimento = UserInput.promptDouble(scanner,
+                "Informe a taxa de crescimento anual (em %): ");
+        int anoAtual = UserInput.promptInt(scanner, "Informe o ano atual: ");
         scanner.close();
         System.out.printf("População atual (%d): %.2f bilhões%n", anoAtual, populacaoAtual);
         for (int i = 1; i <= 5; i++) {
